# Meshtastic-SAME-EAS-Alerter

./: Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: main.yml  release-binaries.yml  rust_release.yml  rust_test.yml
etc/ci/: before_deploy.sh
src/: main.rs  sameCodes.csv
