[package]
name = "Meshtastic-SAME-EAS-Alerter"
version = "0.1.0"
edition = "2021"

[dependencies]
sameold = "0.4"
chrono = "0.4.38"
byteorder = "1.5.0"
anyhow = "1.0.86"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
meshtastic = { git = "https://github.com/PeterGrace/meshtastic-rust", branch = "ble_feature_flag" }
log = "0.4.21"
thiserror = "1.0.61"
strum = { version = "0.26.2", features = ["derive", "strum_macros"] }
ascii = "1.1.0"