[package]
name = "Meshtastic-SAME-EAS-Alerter"
version = "0.7.1"
edition = "2021"

[dependencies]
sameold = "0.5.0"
chrono = "0.4.38"
byteorder = "1.5.0"
anyhow = "1.0.86"
tokio = { version = "1.0.0", features = ["full"] }
meshtastic = { git = "https://github.com/PeterGrace/meshtastic-rust", branch = "ble_feature_flag" }
log = "0.4.21"
thiserror = "1.0.61"
strum = { version = "0.26.2", features = ["derive", "strum_macros"] }
ascii = "1.1.0"
clap = { version = "4.5.5", features = ["derive"] }
atty = "0.2.14"
rust-embed = "8.4.0"
serde = { version = "1.0.203", features = ["derive"] }
csv = "1.3.0"
simple_logger = "5.0.0"
